P1/log.txt
nohup: ignoring input
  File "./train_nmt.py", line 8
    print params
               ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(params)?
